wavy/build_error.txt
Resolving dependencies...
Downloading packages...
  connectivity_plus 6.1.5 (7.0.0 available)
  flutter_lints 5.0.0 (6.0.0 available)
  flutter_riverpod 2.6.1 (3.2.1 available)
  go_router 14.8.1 (17.1.0 available)
  google_fonts 6.3.3 (8.0.2 available)
  image_cropper 8.1.0 (11.0.0 available)
  image_cropper_for_web 6.1.0 (7.0.0 available)
  image_cropper_platform_interface 7.2.0 (8.0.0 available)
  lints 5.1.1 (6.1.0 available)
  matcher 0.12.18 (0.12.19 available)
  meta 1.17.0 (1.18.1 available)
  riverpod 2.6.1 (3.2.1 available)
  riverpod_annotation 2.6.1 (4.0.2 available)
  smooth_page_indicator 1.2.1 (2.0.1 available)
  test_api 0.7.9 (0.7.10 available)
Got dependencies!
15 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
lib/src/ui/screens/feed_screen.dart:185:65: Error: This expression has type 'void' and can't be used.
                        final success = await _swiperController.undo();
                                                                ^
lib/src/ui/screens/feed_screen.dart:186:29: Error: This expression has type 'void' and can't be used.
                        if (success) {
                            ^
Target kernel_snapshot_program failed: Exception
#0      KernelSnapshot.build (package:flutter_tools/src/build_system/targets/common.dart:289:7)
<asynchronous suspension>
#1      _BuildInstance._invokeInternal (package:flutter_tools/src/build_system/build_system.dart:937:9)
<asynchronous suspension>
#2      Future.wait.<anonymous closure> (dart:async/future.dart:546:21)
<asynchronous suspension>
#3      _BuildInstance.invokeTarget (package:flutter_tools/src/build_system/build_system.dart:875:32)
<asynchronous suspension>
#4      FlutterBuildSystem.build (package:flutter_tools/src/build_system/build_system.dart:684:16)
<asynchronous suspension>
#5      BundleBuilder.build (package:flutter_tools/src/bundle_builder.dart:78:32)
<asynchronous suspension>
#6      BuildBundleCommand.runCommand (package:flutter_tools/src/commands/build_bundle.dart:144:5)
<asynchronous suspension>
#7      FlutterCommand.run.<anonymous closure> (package:flutter_tools/src/runner/flutter_command.dart:1590:27)
<asynchronous suspension>
#8      AppContext.run.<anonymous closure> (package:flutter_tools/src/base/context.dart:154:19)
<asynchronous suspension>
#9      CommandRunner.runCommand (package:args/command_runner.dart:212:13)
<asynchronous suspension>
#10     FlutterCommandRunner.runCommand.<anonymous closure> (package:flutter_tools/src/runner/flutter_command_runner.dart:496:9)
<asynchronous suspension>
#11     AppContext.run.<anonymous closure> (package:flutter_tools/src/base/context.dart:154:19)
<asynchronous suspension>
#12     FlutterCommandRunner.runCommand (package:flutter_tools/src/runner/flutter_command_runner.dart:431:5)
<asynchronous suspension>
#13     FlutterCommandRunner.run.<anonymous closure> (package:flutter_tools/src/runner/flutter_command_runner.dart:307:33)
<asynchronous suspension>
#14     run.<anonymous closure>.<anonymous closure> (package:flutter_tools/runner.dart:104:11)
<asynchronous suspension>
#15     AppContext.run.<anonymous closure> (package:flutter_tools/src/base/context.dart:154:19)
<asynchronous suspension>
#16     main (package:flutter_tools/executable.dart:103:3)
<asynchronous suspension>

Failed to build bundle.
